--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <div class="poto">
-            <img src="image/a.png" alt="">
+            <img src="a.png" alt="">
         </div>
 
         <div class="content">
