--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="tengah"> 
     <header>
         <h1>Resources</h1>
         <p>Lorem ipsum dolor</p>
@@ -54,7 +55,7 @@
             </div>
         </div>
     </main>
-
+  </div>
 </body>
 
 </html>
